<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_edit_text"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingHorizontal="10dp" />

                <EditText
                    android:id="@+id/doctor_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_edit_text"
                    android:hint="@string/doctor_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingHorizontal="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/take_every" />

                    <EditText
                        android:id="@+id/repeat_interval"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded_edit_text"
                        android:hint="@string/one"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLines="1"
                        android:paddingHorizontal="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/hours" />
                </LinearLayout>

                <EditText
                    android:id="@+id/init_date"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_edit_text"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/init_date"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingHorizontal="10dp"
                    tools:ignore="KeyboardInaccessibleWidget,TextFields" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/color_indicator" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/color_picker"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    app:cornerRadius="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/set_notifications" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/requires_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cancel"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="0.5"
                        android:text="@string/cancel"
                        android:textColor="@color/neutral_blue"
                        app:cornerRadius="14dp"
                        app:strokeColor="@color/purple_500" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/save"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="0.5"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        app:cornerRadius="14dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>